--- a/project/index.html
+++ b/project/index.html
@@ -15,8 +15,8 @@
                <div id="money">money</div>
             </div>
             <div class="input">
-                <div class="inputMenu"><input type="text" placeholder="내용을 입력하세요(예: 점심값, 월급)"></div>
-                <div class="inputMenu"><input type="text" placeholder="금액을 입력하세요"></div>
+                <div><input type="text" placeholder="내용을 입력하세요(예: 점심값, 월급)" id="inputName"></div>
+                <div><input type="text" placeholder="금액을 입력하세요" id="inputPrice"></div>
             </div>
             <div class="tag">
                 <div><button class="tagButton" id="get">수입</button></div>
@@ -27,14 +27,14 @@
             </div>
             <hr>
             <div class="history">
-                <div><button class="historyButton">전체</button></div>
-                <div><button class="historyButton">수입</button></div>
-                <div><button class="historyButton">지출</button></div>
+                <div><button class="historyButton" id="allHistory">전체</button></div>
+                <div><button class="historyButton" id="getHistory">수입</button></div>
+                <div><button class="historyButton" id="spentHistory">지출</button></div>
             </div>
             <div class="all">
                 <div id="allGet">
                     <div>총수입</div>
-                    <div class="allMoney">money</div>
+                    <div id="allMoney">money</div>
                 </div>
                 <div id="spent">
                     <div>총 지출</div>
@@ -42,10 +42,14 @@
                 </div>
                 <div id="remain">
                     <div>잔액</div>
-                    <div class="allMoney" >금액</div>
+                    <div id="balance" >금액</div>
                 </div>
+            </div>
+            <div id="list">
+                
             </div>
         </div>
    <script src="./script.js"></script>
+
 </body>
 </html>
