--- a/project/index.html
+++ b/project/index.html
@@ -27,7 +27,7 @@
             </div>
             <hr>
             <div class="history">
-                <div><button class="historyButton" id="allHistory">전체</button></div>
+                <div><button class="historyButton historyActive" id="allHistory">전체</button></div>
                 <div><button class="historyButton" id="getHistory">수입</button></div>
                 <div><button class="historyButton" id="spentHistory">지출</button></div>
             </div>
@@ -49,7 +49,7 @@
                 
             </div>
         </div>
-   <script src="./script.js"></script>
+   <script src="./script2.js"></script>
 
 </body>
 </html>
